k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-2048-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: "2048.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: "game-2048"
                port:
                  number: 80
